--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
     <title>tarea</title>
 </head>
 <body>
-
-
-    
+ <div class="cabezera">
+    <h1>Trabajo de investigacion de Js</h1>
+ </div>
+ <div class="contenido">
+    <div class="respuestas">
+        <div class="rta1"></div>
+        <div class="rta2"></div>
+        <div class="rta3"></div>
+        <div class="rta4"></div>
+        <div class="rta5"></div>
+        <div class="rta6"></div>
+        <div class="rta7"></div>
+        <div class="rta8"></div>
+        <div class="rta9"></div>
+        <div class="rta10"></div>
+    </div>
+ </div>
 </body>
 </html>
