--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
  </div>
  <div class="contenido">
     <div class="respuestas">
-        <div class="rta1"></div>
+        <div class="rta1">
+            <h2>¿Qué versiones de JavaScript hay en el mercado?</h2>
+              <p>Actualmente en el mercado estan disponibles las siguien versiones de JavaScript 1.0, 1.1, 1.2, 1.3, 1.4, 1.6 y 1.7. Pero igualmente en 1997 se lanzo al mercadoo ECMAScript 1, a lo cual le siguieron las siguientes versione; 2, 3, 4, 5 y 6</p>
+        </div>
         <div class="rta2"></div>
         <div class="rta3"></div>
         <div class="rta4"></div>
