--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
             <h2>¿Qué versiones de JavaScript hay en el mercado?</h2>
               <p>Actualmente en el mercado estan disponibles las siguien versiones de JavaScript 1.0, 1.1, 1.2, 1.3, 1.4, 1.6 y 1.7. Pero igualmente en 1997 se lanzo al mercadoo ECMAScript 1, a lo cual le siguieron las siguientes versione; 2, 3, 4, 5 y 6</p>
         </div>
-        <div class="rta2"></div>
+        <div class="rta2">
+            <h2>¿Cómo se integra JavaScript a HTML?</h2>
+            <p>Actualmente se pueden lograr dos formas de enlazar un JavaScript en un HTML</p>
+            <h3>Agregar JavaScript directamente al HTML:</h3>
+            <p>Esta opcion se lleva a cabo con la estiqueta "script" dentro de esta se trabaja todo el Js. y se puede agregar en el "head" o se puede agregar en el "body" </p>
+            <h3>Agregar JavaScript en un archivo separado</h3>
+            <p>Si hablamos de practicidad a la hora de usar un js en un hatml de esta forma e slo mas optimo que podemos elegir devido a que mientras mas avancemos con el proyecto html mas vamos a necesitar linkear muchos html a un mismo Js. Es por eso que es preferible por la mayoria de programadores hacer todo el codigo js en un archivo separado y luego adjuntarlo con la estiqueta "script" </p>        
+        </div>
         <div class="rta3"></div>
         <div class="rta4"></div>
         <div class="rta5"></div>
