--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <h3>Agregar JavaScript en un archivo separado</h3>
             <p>Si hablamos de practicidad a la hora de usar un js en un hatml de esta forma e slo mas optimo que podemos elegir devido a que mientras mas avancemos con el proyecto html mas vamos a necesitar linkear muchos html a un mismo Js. Es por eso que es preferible por la mayoria de programadores hacer todo el codigo js en un archivo separado y luego adjuntarlo con la estiqueta "script" </p>        
         </div>
-        <div class="rta3"></div>
+        <div class="rta3">
+            <h2>¿Cómo es el manejo de las variables, tipos de datos y expresiones regulares en JS?</h2>
+            <p>las variables se pueden declarar usando "var", "const" o "let". "var" tiene alcance de funcion mientras que "const" y "let" tiene alcance de un bloque. Las variables "const" no pueden ser reasignadas, mientras que las variables ler si pueden serlo, "var", "const" y "let" pueden ser confusas al principio. Todos los lenguajes de programacion tienen estucturas de datos integradas. Estas se pueden utilizar para costruir otras estructuras de datos. Siempre que sea posible, se hacen comparacione de otros lenguajes. Las expresiones regulares son patrones que se utilizan para hacer coincidir combinaciones de caracteres en cadenas. En JavaScript, las expresiones regulares tambien son objetos</p>
+        </div>
         <div class="rta4"></div>
         <div class="rta5"></div>
         <div class="rta6"></div>
