--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <h2>¿Cómo es el manejo de las variables, tipos de datos y expresiones regulares en JS?</h2>
             <p>las variables se pueden declarar usando "var", "const" o "let". "var" tiene alcance de funcion mientras que "const" y "let" tiene alcance de un bloque. Las variables "const" no pueden ser reasignadas, mientras que las variables ler si pueden serlo, "var", "const" y "let" pueden ser confusas al principio. Todos los lenguajes de programacion tienen estucturas de datos integradas. Estas se pueden utilizar para costruir otras estructuras de datos. Siempre que sea posible, se hacen comparacione de otros lenguajes. Las expresiones regulares son patrones que se utilizan para hacer coincidir combinaciones de caracteres en cadenas. En JavaScript, las expresiones regulares tambien son objetos</p>
         </div>
-        <div class="rta4"></div>
+        <div class="rta4">
+            <h2>¿Cómo son todas las formas de declaración de funciones en JS?</h2>
+            <p>Una de la caracteristicas mas importantes de las funciones de JavaScript es su versatilidad. En JavaScript las funciones son diferentes a las funciones de otros lenguajes de programacion. En JavaScript las funciones son un objeto. Por ello se les puede asignar variable, arrays u otros objetos. La forma en la cual hallamos definido nuestra funcion, definira el comportmiento de la misma. Siendo la funcion que podemos crear en JavaScript son los siguientes </p>
+         
+        </div>
         <div class="rta5"></div>
         <div class="rta6"></div>
         <div class="rta7"></div>
