Agrego tabla de la respuesta 4

--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
         <div class="rta4">
             <h2>¿Cómo son todas las formas de declaración de funciones en JS?</h2>
             <p>Una de la caracteristicas mas importantes de las funciones de JavaScript es su versatilidad. En JavaScript las funciones son diferentes a las funciones de otros lenguajes de programacion. En JavaScript las funciones son un objeto. Por ello se les puede asignar variable, arrays u otros objetos. La forma en la cual hallamos definido nuestra funcion, definira el comportmiento de la misma. Siendo la funcion que podemos crear en JavaScript son los siguientes </p>
-         
+            <ul>
+                <li>Function declaration</li>
+                <li>Function expression</li>
+                <li>IIFE (Inmediately Invoked function Expression)</li>
+                <li>Shorthand method definition</li>
+                <li>Arrow function</li>
+                <li>Generator function</li>
+                <li>Function constructor</li>
+             </ul>
         </div>
         <div class="rta5"></div>
         <div class="rta6"></div>
