--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
                 <li>Function constructor</li>
              </ul>
         </div>
-        <div class="rta5"></div>
+        <div class="rta5">
+            <h2>¿Cuáles son los operadores y conversión entre tipos?</h2>
+            <p>Existen varios tipos de operadores:</p>
+        
+        </div>
         <div class="rta6"></div>
         <div class="rta7"></div>
         <div class="rta8"></div>
