--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
         <div class="rta5">
             <h2>¿Cuáles son los operadores y conversión entre tipos?</h2>
             <p>Existen varios tipos de operadores:</p>
-        
+            <h3>Operadores arimetricos:</h3>
+            <ul>
+              <li>Suma: 4+4=8</li>
+              <li>Resta:4+2=2</li>
+              <li>Multiplicación: 3*3=9</li>
+              <li>División 20/2=10</li>
+              <li>Modulo: 5%2=1</li>
+            </ul>
         </div>
         <div class="rta6"></div>
         <div class="rta7"></div>
