--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
               <li>División 20/2=10</li>
               <li>Modulo: 5%2=1</li>
             </ul>
+            <h3>Operadores relacionales</h3>
+            <ul>
+                <li>> Mayor que</li>
+                <li>< Menor que</li>
+                <li>>= Mayor o igual</li>
+                <li><= Menor o igual</li>
+                <li>== Igual que sin tener en cuenta el tipo de dato</li>
+                <li>=== igual que teniendo en cuenta el tipo de dato</li>
+                <li>!= Diferente que sin tener en cuenta el tipo de dato</li>
+                <li>!== Doble diferente teniendo en cuenta el tipo de dato</li>
+            </ul>
         </div>
         <div class="rta6"></div>
         <div class="rta7"></div>
