Agrego tabla (operadores incre y decre) respuesta 5

--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
                 <li>!= Diferente que sin tener en cuenta el tipo de dato</li>
                 <li>!== Doble diferente teniendo en cuenta el tipo de dato</li>
             </ul>
+            <h3>Operadoresde incremento y decremento</h3>
+            <ul>
+                <li>Incremento: i+=x la variable i incrementa x</li>
+                <li>Decremento: i-= x la variable i decrementa x</li>
+                <li>Division: i/= x la variable i se divide por x</li>
+                <li>Multiplicacion: i*= x la variable i se multiplica por x</li>
+                <li>Operador unario incremento: i++ la variable i incrementa 1</li>
+                <li>Operador unario decremento: i- - la variable i decrementa 1</li>
+            </ul>
         </div>
         <div class="rta6"></div>
         <div class="rta7"></div>
