Agrego tabla (operadores logicos) respuesta 5

--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                 <li>Operador unario incremento: i++ la variable i incrementa 1</li>
                 <li>Operador unario decremento: i- - la variable i decrementa 1</li>
             </ul>
+            <h3>Operadores logicos:</h3>
+            <ul>
+                <li>!: negación not/no</li>
+                <li>||:disyunción or/o</li>
+                <li>&&:conjunción and/y</li>
+            </ul>
+
         </div>
         <div class="rta6"></div>
         <div class="rta7"></div>
