Agrego conversion de tipos respuesta 5

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                 <li>||:disyunción or/o</li>
                 <li>&&:conjunción and/y</li>
             </ul>
+            <h3>Conversion de tipos:</h3>
+            <p>La conversión de tipos o concatenacion en js se lleva a cabo con el operador aritmetico +.</p>
+
 
         </div>
         <div class="rta6"></div>
