--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
             </ul>
             <h3>Conversion de tipos:</h3>
             <p>La conversión de tipos o concatenacion en js se lleva a cabo con el operador aritmetico +.</p>
-
-
         </div>
-        <div class="rta6"></div>
+        <div class="rta6">
+            <h2>¿Cuáles son las estructura de control de JS?</h2>
+            <p>Las estructuras de control son indispensables en cualquier tipo de lenguaje de programacion que se jacte de serlo. Las estructuras de control sirven para controlar el flujo de ejecucion de un algoritmo, que pase tal situacion segun tal condicion.</p>
+         
+        </div>
         <div class="rta7"></div>
         <div class="rta8"></div>
         <div class="rta9"></div>
