Agrego tabla estructura de control respuesta 6

--- a/index.html
+++ b/index.html
@@ -83,9 +83,16 @@
             <p>La conversión de tipos o concatenacion en js se lleva a cabo con el operador aritmetico +.</p>
         </div>
         <div class="rta6">
-            <h2>¿Cuáles son las estructura de control de JS?</h2>
-            <p>Las estructuras de control son indispensables en cualquier tipo de lenguaje de programacion que se jacte de serlo. Las estructuras de control sirven para controlar el flujo de ejecucion de un algoritmo, que pase tal situacion segun tal condicion.</p>
-         
+        	<h2>¿Cuáles son las estructura de control de JS?</h2>
+             <p>Las estructuras de control son indispensables en cualquier tipo de lenguaje de programacion que se jacte de serlo. Las estructuras de control sirven para controlar el flujo de ejecucion de un algoritmo, que pase tal situacion segun tal condicion.</p>
+             <h3>Existen las siguientes extruncturas de control en js:</h3>
+             <ul>
+               <li>If/else</li>
+               <li>Switch</li>
+               <li>Bucle for</li>
+               <li>Bucle while</li>
+               <li>Bucle do/while</li>
+             </ul>
         </div>
         <div class="rta7"></div>
         <div class="rta8"></div>
