--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
                <li>Bucle do/while</li>
              </ul>
         </div>
-        <div class="rta7"></div>
+        <div class="rta7">
+            <h2>¿Qué es el objeto dom en JS? Y ¿Cómo trabaja?</h2>
+            <p>Un objeto map cumple una función muy similar a la de los objetos normales, la cual es almacenar pares clave-valor. Aunque cuenta con algunas diferencias. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
+        
+        </div>
         <div class="rta8"></div>
         <div class="rta9"></div>
         <div class="rta10"></div>
