Agrego tabla (relaciones con el mouse) respuesta 8

--- a/index.html
+++ b/index.html
@@ -101,7 +101,20 @@
         <div class="rta8">
             <h2>¿Cuáles son todos los eventos que trabaja JS?</h2>
             <p>Los eventos de js refieren a los tipos de acciones que pueden desencadenar un evento de nuestra eleccion. Hay muchos tipos de acciones, estos son la mayoria de eventos en js:</p>
-        
+            <h3>Relacionados con el mouse</h3>
+            <ul>
+                <li>onclick:Click sobre un elemento</li>
+                <li>ondblclick: Doble click sobre un elemento</li>
+                <li>onmousedown:Se pulsa un botón del ratón sobre un elemento</li>
+                <li>onmouseenter:El puntero del mouse entra en el area de un elemento</li>
+                <li>onmouseleave:El puntero del mouse sale del area de un elemento</li>
+                <li>onmousemove:El puntero del mouse se esta moviendo sobre el area de un elemento</li>
+                <li>onmouseover:El puntero del mouse se situa encima del area de un elemento</li>
+                <li>onmouseout:El puntero del mouse sale fuera del area del elemento o fuera de uno de sus hijos</li>
+                <li>onmouseup:Un boton del mouse se libera estando sobre un elemento</li>
+                <li>contextmenu:Se pulsa el boton derecho del mouse</li>
+              </ul>
+          
         </div>
         <div class="rta9"></div>
         <div class="rta10"></div>
