Agrego tabla (relaciones con el teclado) respuesta 8

--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
                 <li>onmouseup:Un boton del mouse se libera estando sobre un elemento</li>
                 <li>contextmenu:Se pulsa el boton derecho del mouse</li>
               </ul>
+              <h3>Relacionados con el teclado</h3>
+              <ul>
+                <li>onkeydown: El usuario tiene pulsada una tecla (para elementos de formulario y body)</li>
+                <li>onkeypress: El usuario pulsa una tecla (momento justo en que la pulsa) (para elementos de formulario y body)</li>
+                <li>onkeyup: El usuario libera una tecla que tenía pulsada (para elementos de formulario y body)</li>
+              </ul>
           
         </div>
         <div class="rta9"></div>
