Agrego tabla (relaciones con el formulario) respuesta 8

--- a/index.html
+++ b/index.html
@@ -120,7 +120,15 @@
                 <li>onkeypress: El usuario pulsa una tecla (momento justo en que la pulsa) (para elementos de formulario y body)</li>
                 <li>onkeyup: El usuario libera una tecla que tenía pulsada (para elementos de formulario y body)</li>
               </ul>
-          
+              <h3>Relacionados con formularios</h3>
+              <ul>
+                <li>onfocus: Un elemento del formulario toma el foco</li>
+                <li>onblur: Un elemento del formulario pierde el foco</li>
+                <li>onchange: Un elemento del formulario cambia</li>
+                <li>onselect: El usuario selecciona el texto de un elemento input o textarea</li>
+                <li>onsubmit: Se pulsa el boton de envio del formulario (antes del envio)</li>
+                <li>onreset: Se pulsa el boton reset del formulario</li>
+              </ul>
         </div>
         <div class="rta9"></div>
         <div class="rta10"></div>
