--- a/index.html
+++ b/index.html
@@ -129,6 +129,17 @@
                 <li>onsubmit: Se pulsa el boton de envio del formulario (antes del envio)</li>
                 <li>onreset: Se pulsa el boton reset del formulario</li>
               </ul>
+              <h3>Relacionados con ventanas o frames</h3>
+              <ul>
+                <li>onload: Se ha completado la carga de la ventana</li>
+                <li>onunload: El usuario ha cerrado la ventana</li>
+                <li>onunload: El usuario ha cerrado la ventana</li>
+              </ul>
+              <h3>Relacionados con animaciones y transiciones</h3>
+              <ul>
+                <li>animationend, animationiteration, animationstart, beginEvent, endEvent, repeatEvent, transitionend</li>
+              </ul>              
+
         </div>
         <div class="rta9"></div>
         <div class="rta10"></div>
