Agrego tabla (relaciones con la bateria) respuesta 8

--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
               <ul>
                 <li>animationend, animationiteration, animationstart, beginEvent, endEvent, repeatEvent, transitionend</li>
               </ul>              
-
+              <h3>Relacionados con la bateria y carga de la bateria</h3>
+              <ul>
+                <li>chargingchange, chargingtimechange, dischargingtimechange, levelchange</li>
+              </ul>
+          
         </div>
         <div class="rta9"></div>
         <div class="rta10"></div>
