Agrego tabla (relaciones con las llamadas) respuesta 8

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
               <ul>
                 <li>chargingchange, chargingtimechange, dischargingtimechange, levelchange</li>
               </ul>
+              <h3>Relacionados con llamadas tipo telefonia</h3>
+              <ul>
+                <li>alerting, busy, callschanged, connected, connecting, dialing, disconnected, disconnecting, error, held, holding, incoming, resuming, statechange
+                </li>
+              </ul>
+                        
           
         </div>
         <div class="rta9"></div>
