Agrego tabla (relaciones con los cambios de DOM) respuesta 8

--- a/index.html
+++ b/index.html
@@ -145,10 +145,12 @@
               </ul>
               <h3>Relacionados con llamadas tipo telefonia</h3>
               <ul>
-                <li>alerting, busy, callschanged, connected, connecting, dialing, disconnected, disconnecting, error, held, holding, incoming, resuming, statechange
-                </li>
+                <li>alerting, busy, callschanged, connected, connecting, dialing, disconnected, disconnecting, error, held, holding, incoming, resuming, statechange</li>
               </ul>
-                        
+              <h3>Relacionados con cambios en el DOM</h3>
+              <ul>
+                <li>DOMAttrModified, DOMCharacterDataModified, DOMContentLoaded, DOMElementNameChanged, DOMNodeInserted, DOMNodeInsertedIntoDocument, DOMNodeRemoved, DOMNodeRemovedFromDocument, DOMSubtreeModified</li>
+              </ul>                        
           
         </div>
         <div class="rta9"></div>
