--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
               <ul>
                 <li>DOMAttrModified, DOMCharacterDataModified, DOMContentLoaded, DOMElementNameChanged, DOMNodeInserted, DOMNodeInsertedIntoDocument, DOMNodeRemoved, DOMNodeRemovedFromDocument, DOMSubtreeModified</li>
               </ul>                        
-          
+              <h3>Relacionados con arrastre de elementos (drag and drop)</h3>
+              <ul>
+                <li>drag, dragend, dragenter, dragleave, dragover, dragstart, drop</li>
+              </ul>          
         </div>
         <div class="rta9"></div>
         <div class="rta10"></div>
