Agrego tabla (relaciones con video y audio) respuesta 8

--- a/index.html
+++ b/index.html
@@ -154,7 +154,12 @@
               <h3>Relacionados con arrastre de elementos (drag and drop)</h3>
               <ul>
                 <li>drag, dragend, dragenter, dragleave, dragover, dragstart, drop</li>
-              </ul>          
+              </ul>
+              <h3>Relacionados con video y audio</h3>
+              <ul>
+                <li>audioprocess, canplay, canplaythrough, durationchange, emptied, ended, ended, loadeddata, loadedmetadata, pause, play, playing, ratechange, seeked, seeking, stalled, suspend, timeupdate, volumechange, waiting, complete</li>
+              </ul>              
+
         </div>
         <div class="rta9"></div>
         <div class="rta10"></div>
