cambio contenido de div rta8 a div rta 9 y agrego rta 8

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
             <p>Un objeto map cumple una función muy similar a la de los objetos normales, la cual es almacenar pares clave-valor. Aunque cuenta con algunas diferencias. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
         </div>
         <div class="rta8">
+                <h2>¿Qué función tiene en JS el Object Map?</h2>
+                <p>Un objeto map cumple una función muy similar a la de los objetos normales, la cual es almacenar pares clave-valor. Aunque cuenta con algunas diferencias. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
+        </div>
+        <div class="rta9">
             <h2>¿Cuáles son todos los eventos que trabaja JS?</h2>
             <p>Los eventos de js refieren a los tipos de acciones que pueden desencadenar un evento de nuestra eleccion. Hay muchos tipos de acciones, estos son la mayoria de eventos en js:</p>
             <h3>Relacionados con el mouse</h3>
@@ -161,7 +165,6 @@
               </ul>              
 
         </div>
-        <div class="rta9"></div>
         <div class="rta10"></div>
     </div>
  </div>
