Agrego tabla (relaciones con conexion a internet) respuesta9

--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
               <ul>
                 <li>audioprocess, canplay, canplaythrough, durationchange, emptied, ended, ended, loadeddata, loadedmetadata, pause, play, playing, ratechange, seeked, seeking, stalled, suspend, timeupdate, volumechange, waiting, complete</li>
               </ul>              
-
+              <h3>Relacionados con la conexion a internet</h3>
+              <ul>
+                <li>disabled, enabled, offline, online, statuschange, connectionInfoUpdate</li>
+              </ul>
         </div>
         <div class="rta10"></div>
     </div>
