--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Css/Style.css">
     <title>tarea</title>
 </head>
 <body>
@@ -13,24 +13,24 @@
  </div>
  <div class="contenido">
     <div class="respuestas">
-        <div class="rta1">
-            <h2>¿Qué versiones de JavaScript hay en el mercado?</h2>
+        <div class="rta">
+            <h2 class="titulos">¿Qué versiones de JavaScript hay en el mercado?</h2>
               <p>Actualmente en el mercado estan disponibles las siguien versiones de JavaScript 1.0, 1.1, 1.2, 1.3, 1.4, 1.6 y 1.7. Pero igualmente en 1997 se lanzo al mercadoo ECMAScript 1, a lo cual le siguieron las siguientes versione; 2, 3, 4, 5 y 6</p>
         </div>
-        <div class="rta2">
-            <h2>¿Cómo se integra JavaScript a HTML?</h2>
+        <div class="rta">
+            <h2 class="titulos">¿Cómo se integra JavaScript a HTML?</h2>
             <p>Actualmente se pueden lograr dos formas de enlazar un JavaScript en un HTML</p>
-            <h3>Agregar JavaScript directamente al HTML:</h3>
+            <h3 class="titulos">Agregar JavaScript directamente al HTML:</h3>
             <p>Esta opcion se lleva a cabo con la estiqueta "script" dentro de esta se trabaja todo el Js. y se puede agregar en el "head" o se puede agregar en el "body" </p>
-            <h3>Agregar JavaScript en un archivo separado</h3>
+            <h3 class="titulos">Agregar JavaScript en un archivo separado</h3>
             <p>Si hablamos de practicidad a la hora de usar un js en un hatml de esta forma e slo mas optimo que podemos elegir devido a que mientras mas avancemos con el proyecto html mas vamos a necesitar linkear muchos html a un mismo Js. Es por eso que es preferible por la mayoria de programadores hacer todo el codigo js en un archivo separado y luego adjuntarlo con la estiqueta "script" </p>        
         </div>
-        <div class="rta3">
-            <h2>¿Cómo es el manejo de las variables, tipos de datos y expresiones regulares en JS?</h2>
+        <div class="rta">
+            <h2 class="titulos">¿Cómo es el manejo de las variables, tipos de datos y expresiones regulares en JS?</h2>
             <p>las variables se pueden declarar usando "var", "const" o "let". "var" tiene alcance de funcion mientras que "const" y "let" tiene alcance de un bloque. Las variables "const" no pueden ser reasignadas, mientras que las variables ler si pueden serlo, "var", "const" y "let" pueden ser confusas al principio. Todos los lenguajes de programacion tienen estucturas de datos integradas. Estas se pueden utilizar para costruir otras estructuras de datos. Siempre que sea posible, se hacen comparacione de otros lenguajes. Las expresiones regulares son patrones que se utilizan para hacer coincidir combinaciones de caracteres en cadenas. En JavaScript, las expresiones regulares tambien son objetos</p>
         </div>
-        <div class="rta4">
-            <h2>¿Cómo son todas las formas de declaración de funciones en JS?</h2>
+        <div class="rta">
+            <h2 class="titulos">¿Cómo son todas las formas de declaración de funciones en JS?</h2>
             <p>Una de la caracteristicas mas importantes de las funciones de JavaScript es su versatilidad. En JavaScript las funciones son diferentes a las funciones de otros lenguajes de programacion. En JavaScript las funciones son un objeto. Por ello se les puede asignar variable, arrays u otros objetos. La forma en la cual hallamos definido nuestra funcion, definira el comportmiento de la misma. Siendo la funcion que podemos crear en JavaScript son los siguientes </p>
             <ul>
                 <li>Function declaration</li>
@@ -42,10 +42,10 @@
                 <li>Function constructor</li>
              </ul>
         </div>
-        <div class="rta5">
-            <h2>¿Cuáles son los operadores y conversión entre tipos?</h2>
+        <div class="rta">
+            <h2 class="titulos">¿Cuáles son los operadores y conversión entre tipos?</h2>
             <p>Existen varios tipos de operadores:</p>
-            <h3>Operadores arimetricos:</h3>
+            <h3 class="titulos">Operadores arimetricos:</h3>
             <ul>
               <li>Suma: 4+4=8</li>
               <li>Resta:4+2=2</li>
@@ -53,7 +53,7 @@
               <li>División 20/2=10</li>
               <li>Modulo: 5%2=1</li>
             </ul>
-            <h3>Operadores relacionales</h3>
+            <h3 class="titulos">Operadores relacionales</h3>
             <ul>
                 <li>> Mayor que</li>
                 <li>< Menor que</li>
@@ -64,7 +64,7 @@
                 <li>!= Diferente que sin tener en cuenta el tipo de dato</li>
                 <li>!== Doble diferente teniendo en cuenta el tipo de dato</li>
             </ul>
-            <h3>Operadoresde incremento y decremento</h3>
+            <h3 class="titulos">Operadoresde incremento y decremento</h3>
             <ul>
                 <li>Incremento: i+=x la variable i incrementa x</li>
                 <li>Decremento: i-= x la variable i decrementa x</li>
@@ -73,19 +73,19 @@
                 <li>Operador unario incremento: i++ la variable i incrementa 1</li>
                 <li>Operador unario decremento: i- - la variable i decrementa 1</li>
             </ul>
-            <h3>Operadores logicos:</h3>
+            <h3 class="titulos">Operadores logicos:</h3>
             <ul>
                 <li>!: negación not/no</li>
                 <li>||:disyunción or/o</li>
                 <li>&&:conjunción and/y</li>
             </ul>
-            <h3>Conversion de tipos:</h3>
+            <h3 class="titulos">Conversion de tipos:</h3>
             <p>La conversión de tipos o concatenacion en js se lleva a cabo con el operador aritmetico +.</p>
         </div>
-        <div class="rta6">
-        	<h2>¿Cuáles son las estructura de control de JS?</h2>
+        <div class="rta">
+        	<h2 class="titulos">¿Cuáles son las estructura de control de JS?</h2>
              <p>Las estructuras de control son indispensables en cualquier tipo de lenguaje de programacion que se jacte de serlo. Las estructuras de control sirven para controlar el flujo de ejecucion de un algoritmo, que pase tal situacion segun tal condicion.</p>
-             <h3>Existen las siguientes extruncturas de control en js:</h3>
+             <h3 class="titulos">Existen las siguientes extruncturas de control en js:</h3>
              <ul>
                <li>If/else</li>
                <li>Switch</li>
@@ -94,18 +94,18 @@
                <li>Bucle do/while</li>
              </ul>
         </div>
-        <div class="rta7">
-            <h2>¿Qué es el objeto dom en JS? Y ¿Cómo trabaja?</h2>
+        <div class="rta">
+            <h2 class="titulos">¿Qué es el objeto dom en JS? Y ¿Cómo trabaja?</h2>
             <p>Un objeto map cumple una función muy similar a la de los objetos normales, la cual es almacenar pares clave-valor. Aunque cuenta con algunas diferencias. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
         </div>
-        <div class="rta8">
-                <h2>¿Qué función tiene en JS el Object Map?</h2>
+        <div class="rta">
+                <h2 class="titulos">¿Qué función tiene en JS el Object Map?</h2>
                 <p>Un objeto map cumple una función muy similar a la de los objetos normales, la cual es almacenar pares clave-valor. Aunque cuenta con algunas diferencias. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
         </div>
-        <div class="rta9">
-            <h2>¿Cuáles son todos los eventos que trabaja JS?</h2>
+        <div class="rta">
+            <h2 class="titulos">¿Cuáles son todos los eventos que trabaja JS?</h2>
             <p>Los eventos de js refieren a los tipos de acciones que pueden desencadenar un evento de nuestra eleccion. Hay muchos tipos de acciones, estos son la mayoria de eventos en js:</p>
-            <h3>Relacionados con el mouse</h3>
+            <h3 class="titulos">Relacionados con el mouse</h3>
             <ul>
                 <li>onclick:Click sobre un elemento</li>
                 <li>ondblclick: Doble click sobre un elemento</li>
@@ -118,13 +118,13 @@
                 <li>onmouseup:Un boton del mouse se libera estando sobre un elemento</li>
                 <li>contextmenu:Se pulsa el boton derecho del mouse</li>
               </ul>
-              <h3>Relacionados con el teclado</h3>
+              <h3 class="titulos">Relacionados con el teclado</h3>
               <ul>
                 <li>onkeydown: El usuario tiene pulsada una tecla (para elementos de formulario y body)</li>
                 <li>onkeypress: El usuario pulsa una tecla (momento justo en que la pulsa) (para elementos de formulario y body)</li>
                 <li>onkeyup: El usuario libera una tecla que tenía pulsada (para elementos de formulario y body)</li>
               </ul>
-              <h3>Relacionados con formularios</h3>
+              <h3 class="titulos">Relacionados con formularios</h3>
               <ul>
                 <li>onfocus: Un elemento del formulario toma el foco</li>
                 <li>onblur: Un elemento del formulario pierde el foco</li>
@@ -133,42 +133,65 @@
                 <li>onsubmit: Se pulsa el boton de envio del formulario (antes del envio)</li>
                 <li>onreset: Se pulsa el boton reset del formulario</li>
               </ul>
-              <h3>Relacionados con ventanas o frames</h3>
+              <h3 class="titulos">Relacionados con ventanas o frames</h3>
               <ul>
                 <li>onload: Se ha completado la carga de la ventana</li>
                 <li>onunload: El usuario ha cerrado la ventana</li>
                 <li>onunload: El usuario ha cerrado la ventana</li>
               </ul>
-              <h3>Relacionados con animaciones y transiciones</h3>
+              <h3 class="titulos">Relacionados con animaciones y transiciones</h3>
               <ul>
                 <li>animationend, animationiteration, animationstart, beginEvent, endEvent, repeatEvent, transitionend</li>
               </ul>              
-              <h3>Relacionados con la bateria y carga de la bateria</h3>
+              <h3 class="titulos">Relacionados con la bateria y carga de la bateria</h3>
               <ul>
                 <li>chargingchange, chargingtimechange, dischargingtimechange, levelchange</li>
               </ul>
-              <h3>Relacionados con llamadas tipo telefonia</h3>
+              <h3 class="titulos">Relacionados con llamadas tipo telefonia</h3>
               <ul>
                 <li>alerting, busy, callschanged, connected, connecting, dialing, disconnected, disconnecting, error, held, holding, incoming, resuming, statechange</li>
               </ul>
-              <h3>Relacionados con cambios en el DOM</h3>
+              <h3 class="titulos">Relacionados con cambios en el DOM</h3>
               <ul>
                 <li>DOMAttrModified, DOMCharacterDataModified, DOMContentLoaded, DOMElementNameChanged, DOMNodeInserted, DOMNodeInsertedIntoDocument, DOMNodeRemoved, DOMNodeRemovedFromDocument, DOMSubtreeModified</li>
               </ul>                        
-              <h3>Relacionados con arrastre de elementos (drag and drop)</h3>
+              <h3 class="titulos">Relacionados con arrastre de elementos (drag and drop)</h3>
               <ul>
                 <li>drag, dragend, dragenter, dragleave, dragover, dragstart, drop</li>
               </ul>
-              <h3>Relacionados con video y audio</h3>
+              <h3 class="titulos">Relacionados con video y audio</h3>
               <ul>
                 <li>audioprocess, canplay, canplaythrough, durationchange, emptied, ended, ended, loadeddata, loadedmetadata, pause, play, playing, ratechange, seeked, seeking, stalled, suspend, timeupdate, volumechange, waiting, complete</li>
               </ul>              
-              <h3>Relacionados con la conexion a internet</h3>
+              <h3 class="titulos">Relacionados con la conexion a internet</h3>
               <ul>
                 <li>disabled, enabled, offline, online, statuschange, connectionInfoUpdate</li>
               </ul>
         </div>
-        <div class="rta10"></div>
+        <div class="rta">
+          <div class="10 preguntas">
+            <h3 class="titulos">validacion</h3>
+            <p>responda</p>
+            <form action="" name="formulario" method="get">
+                <label for="rta" class="titulos">usted es un robot?</h4></label>
+                <input type="text" name="rta" id="rta" placeholder="Respuesta..." required>
+                <input type="submit" id="btn" name="btn" value="Enviar" required>
+            </form>
+            <script>
+                const formulario = document.getElementsByName('formulario')[0],
+                    elementos = formulario.elements,
+                    boton = document.getElementById('btn');
+                const validar = function() {
+                    if (formulario.rta.value =="si") {
+                        alert('muy mal')
+                    } else {
+                        alert('muy bien');
+                    }
+
+                }
+                formulario.addEventListener("submit", validar)
+            </script>
+        </div>
     </div>
  </div>
 </body>
