Corrigo errores y añado informacion

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </ul>
             <h3 class="titulos">Operadores relacionales</h3>
             <ul>
-                <li>> Mayor que</li>
                 <li>< Menor que</li>
+                <li>> Mayor que</li>
                 <li>>= Mayor o igual</li>
                 <li><= Menor o igual</li>
                 <li>== Igual que sin tener en cuenta el tipo de dato</li>
@@ -76,31 +76,31 @@
             <h3 class="titulos">Operadores logicos:</h3>
             <ul>
                 <li>!: negación not/no</li>
-                <li>||:disyunción or/o</li>
                 <li>&&:conjunción and/y</li>
+                <li>||:disyunción or/o</li>
             </ul>
             <h3 class="titulos">Conversion de tipos:</h3>
             <p>La conversión de tipos o concatenacion en js se lleva a cabo con el operador aritmetico +.</p>
         </div>
         <div class="rta">
         	<h2 class="titulos">¿Cuáles son las estructura de control de JS?</h2>
-             <p>Las estructuras de control son indispensables en cualquier tipo de lenguaje de programacion que se jacte de serlo. Las estructuras de control sirven para controlar el flujo de ejecucion de un algoritmo, que pase tal situacion segun tal condicion.</p>
+             <p>Las estructuras de control son indispensables en cualquier tipo de lenguaje de programacion. Las estructuras de control sirven para controlar el flujo de ejecucion de un algoritmo, que pase una situacion puntual segun una condicion.</p>
              <h3 class="titulos">Existen las siguientes extruncturas de control en js:</h3>
              <ul>
-               <li>If/else</li>
                <li>Switch</li>
-               <li>Bucle for</li>
+               <li>If/else</li>
                <li>Bucle while</li>
+               <li>Bucle for</li>
                <li>Bucle do/while</li>
              </ul>
         </div>
         <div class="rta">
             <h2 class="titulos">¿Qué es el objeto dom en JS? Y ¿Cómo trabaja?</h2>
-            <p>Un objeto map cumple una función muy similar a la de los objetos normales, la cual es almacenar pares clave-valor. Aunque cuenta con algunas diferencias. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
+            <p>El objeto map cumple una función bastante igual a la de los objetos normales, la cual es almacenar pares clave-valor. Aunque cuenta con algunas diferencias. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
         </div>
         <div class="rta">
                 <h2 class="titulos">¿Qué función tiene en JS el Object Map?</h2>
-                <p>Un objeto map cumple una función muy similar a la de los objetos normales, la cual es almacenar pares clave-valor. Aunque cuenta con algunas diferencias. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
+                <p>Un objeto map cumple una función muy similar a la de los objetos normales, la cual es contener y almacenar pares clave-valor. Aunque cuenta con algunas cosas diferentes. En los objetos normales las claves solo pueden ser de tipo string o symbol; en el caso de map pueden ser de cualquier forma o tipo, con map podemos conocer su tamaño utilizando la propiedad size, y un map es iterable sin necesidad de las claves como si se necesitan con los objetos normales.</p>
         </div>
         <div class="rta">
             <h2 class="titulos">¿Cuáles son todos los eventos que trabaja JS?</h2>
